--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>new test</title>
   </head>
-  <body></body>
+  <body>
+    <h1>hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis nihil at repellendus eaque, ullam voluptatibus fugit cum. Dicta, officiis magnam.</p>
+  </body>
 </html>
